<resources>
    <string name="app_name">KafeQu</string>
    <string name="login_page_title">Login</string>
    <string name="login_page_signin">Login</string>
    <string name="login_page_signup">Sign Up</string>
    <string name="label_username">Username</string>
    <string name="label_shop">Shop name</string>
    <string name="label_password">Password</string>
    <string name="signup_page_title">Sign up</string>
    <string name="login_page_existing">Back To Login</string>

    <string name="hello_blank_fragment"> JOSSS </string>
    <string name="error_empty">Cant be empty</string>
    <string name="error_uniq">Already bin taken</string>
    <string name="error_format">Invalid format</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
