<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/GridLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:columnCount="4"
android:useDefaultMargins="true">

<TextView
    android:layout_column="0"
    android:layout_columnSpan="3"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="40dp"
    android:layout_row="0"
    android:text="@string/signup_page_title"
    android:textSize="32dip" />

<TextView
    android:layout_column="0"
    android:layout_gravity="right"
    android:layout_row="1"
    android:text="@string/label_username">
</TextView>

<EditText
    android:id="@+id/signup_username"
    android:layout_column="1"
    android:layout_columnSpan="2"
    android:layout_row="1"
    android:ems="10" />

<TextView
    android:layout_column="0"
    android:layout_gravity="end"
    android:layout_row="2"
    android:text="@string/label_password">
</TextView>

<EditText
    android:id="@+id/signup_password"
    android:layout_column="1"
    android:layout_columnSpan="2"
    android:layout_row="2"
    android:inputType="textPassword"
    android:ems="10" />

<TextView
    android:layout_column="0"
    android:layout_gravity="end"
    android:layout_row="3"
    android:text="@string/label_shop">
</TextView>

<EditText
    android:id="@+id/signup_shop_name"
    android:layout_column="1"
    android:layout_columnSpan="2"
    android:layout_row="3"
    android:ems="10" />
<Button
    android:id="@+id/login_button"
    android:layout_column="2"
    android:layout_row="4"
    android:text="@string/login_page_existing" />

<Button
    android:id="@+id/signup_button"
    android:layout_column="1"
    android:layout_row="4"
    android:text="@string/login_page_signup" />

</GridLayout>

